# QuizMaker

./: README.md  io.github.diegoivanme.quizmaker.json  meson.build
data/: io.github.diegoivanme.quizmaker.appdata.xml.in  io.github.diegoivanme.quizmaker.desktop.in  io.github.diegoivanme.quizmaker.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: Application.vala  Sidebar.vala  SlideRow.vala  Window.vala  editwindow.ui  main.vala  meson.build  optionrow.blp  questionpage.blp  questionrow.blp  quizmaker.gresources.xml  sidebar.blp  style.css  window.blp
src/Core/: Option.vala  Options.vala  Question.vala  Quiz.vala
src/Widgets/: ColorButton.vala  EditWindow.vala  OptionRow.vala  OptionsList.vala  QuestionList.vala  QuestionPage.vala  QuestionRow.vala  Sidebar.vala  SlideRow.vala  TrashButton.vala  Window.vala
